# ai-mcp-gateway-python

./: .env  .gitignore  AGENTS.md  main.py  mock_data.sql  pyproject.toml  requirements.txt  run.py  test_routes.py  test_streaming.py
app/: __init__.py  config.py  constants.py  logging_config.py  main.py
app/api/: __init__.py  apikeys.py  chat.py  dependencies.py  deps.py  mcp_gateway.py  openapi_import.py  schemas.py  tools.py
app/api/routers/: __init__.py  admin.py  apikeys.py  auth.py  business_line.py  chat.py  gateway.py  gateway_keys.py  llm_config.py  mcp_gateway.py  microservice.py  openapi.py  permission.py  role.py  tools.py  user.py
app/api/schemas/: __init__.py  chat.py  gateway.py  llm_config.py  microservice.py  openapi.py  tool.py  user.py
app/application/: __init__.py
app/application/chat/: __init__.py  chat_service.py  react_service.py
app/application/llm/: __init__.py  llm_service.py
app/application/tool/: __init__.py  tool_service.py
app/core/: __init__.py  container.py
app/domain/: __init__.py
app/domain/agent/: __init__.py  models.py  prompts.py  service.py
app/domain/auth/: __init__.py  models.py  service.py
app/domain/chat/: __init__.py  (+2 more)
app/infrastructure/: __init__.py  database.py  models.py  repository.py
app/services/: __init__.py  base_chat_service.py  chat_service.py  conversation_logger.py  llm_service.py  mcp_server.py  mcp_tool_registry.py  message_manager.py  react_agent.py  websocket_protocol.py
app/utils/: __init__.py  exceptions.py  port_manager.py  result.py  security.py
scripts/: init_db.sql  mock.sql
(+57 files in other folders)
