[project]
name = "ai-mcp-gateway"
version = "1.0.0"
description = "AI MCP Gateway - Python Implementation"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sse-starlette==2.1.3",
    "sqlalchemy[asyncio]==2.0.35",
    "aiomysql==0.2.0",
    "pymysql==1.1.1",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.9",
    "anthropic>=0.86.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "bcrypt>=4.0.0",
    "python-jose>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
